# Warcraft-Font-Merger

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  README_JP.md  build-linux64.bash  build-mac64.bash  build-win32.bash  build-win64.bash  build.bash  build32.bash  invisible.hpp  libotfcc++.md  merge-otd.cpp  merge.bat  run.sh  version.bash  xmake.lua
.github/workflows/: c-cpp.yml
bin-linux64/: otfccbuild  otfccdump
bin-linux64-pie/: otfccbuild  otfccdump
bin-mac64/: otfccbuild  otfccdump
config/: config.h.in  config.sh.in
font/: a.json
font-builder/: README.md  build.bash  build.sh  common.py  trim-droid.py  trim-noto.py  trim-roboto.py  trim-shs-cn.py  trim-shs.py
font-builder/droid-sans-fallback-builder/: howto.md
include/caryll/: buffer.h  element.h  ownership.h  vector.h
include/dep/: json-builder.h  json.h  sds.h  uthash.h
include/nlohmann/: json.hpp
include/otfcc/: font.h  glyph-order.h  handle.h  logger.h  options.h  primitives.h  sfnt-builder.h  (+1 more)
lib/: xmake.lua
package/: common.sh  dev.sh  environment.md  linux-amd64.sh  linux.sh  mac.sh  win32.sh  winarm.sh  windows-32.sh  windows-arm64.sh  windows-x64.sh  winx86.sh
script/: comp-xs.bat  comp.bat  homepage.url  merge+comp-xs.bat  merge+comp.bat  merge.bat  pack-zh.bat  pack.bat
script-unix/: comp.sh  link.url  merge+comp.sh  merge.sh  pack-zh.sh  pack.sh
script-windows/: comp.bat  fonts.url  merge+comp.bat  merge.bat  pack-zh.bat  pack.bat
src/: json.hpp  merge-name.cpp  merge-name.h  merge-otd.cpp  ps2tt.cpp  ps2tt.h  tt2ps.cpp  xmake.lua
test/: xmake.lua
(+328 files in other folders)
